--- a/service.yaml
+++ b/service.yaml
@@ -1,16 +1,12 @@
 apiVersion: v1
-
 kind: Service
-
 metadata:
   name: myapp-service
- 
 spec:
-  type: nodePort
+  type: NodePort
   selector:
     app: myapp
   ports:
     - port: 5000
-    targetPort: 5000
-    nodePort: 30001
-
+      targetPort: 5000
+      nodePort: 30001
